feat: login added, email/password and google sign in option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WAC</string>
+    <string name="web_client_id">950162286070-2d3g497vu5d2hc5dhjjnnvee7g0o5aj6.apps.googleusercontent.com</string>
 </resources>
